fixes closing box on mobile

--- a/app/stylus/sections/hotels.styl
+++ b/app/stylus/sections/hotels.styl
@@ -74,7 +74,7 @@
           color: white
 
     .overlay
-      background: black
+      background: $grey-drk
       position: absolute
       width: 100%
       height: 0
@@ -88,8 +88,8 @@
         margin-top: 20%
         margin-bottom: 10%
 
-      i
-        margin-right: 3px
+        i
+          margin-right: 3px
 
       .close-overlay
         display: block
